fix tech alignments in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ a {
   position: relative;
 }
 
+.list-group{
+  align-items: center;
+}
+
 #grad-photo {
   border-radius: 10%;
   width: 70%;
